--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,85 @@
     outline: 1px solid rgba(255,0,0,0.3);
 }
 
+*{
+    font-family: 'Raleway', sans-serif;
+}
+/*------------------------HEADER---------------------------*/
+.fondo{
+    background-image: url(../image/large.jpg);
+    width: 100%;
+    height: auto;
+    background-size: cover;
+    
+}
+
+header, .opacidad {
+    background-color: #2C363D;    
+    opacity: 0.8;
+   }
+
+nav{
+    float: right;
+    padding-top: 28px;
+}
+
+nav .list-menu li a{
+    color: white;
+    font-size: 20px;
+}
+
+.logo{
+    padding-top: 20px;
+}
+
+.frases {
+    text-align: center;
+    padding: 13%;
+    color: white;
+    }
+
+.frases h2 {
+    font-size: 50px;
+}
+
+.header-banner{
+    background-color: #064770 ;
+    padding:4%; 
+    color: white;
+}
+
+
+
+.boton{
+    border: 2px solid white;
+    font-size: 30px;
+    background-color: #6382AB;
+    margin-top: 5%;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+/*------------------------SERVICIOS---------------------------*/
+
+.services {
+    padding: 8% 0;
+}
+
+.services h1{
+    color: skyblue;
+    padding-bottom: 5%;
+}
+
+.services h3, p{
+ 
+    color: #506876;
+}
+
+.services p{
+    font-size: 17px;
+    color: dimgray;
+}
+
 .icon-container {
     width: 150px;
     height: 150px;
@@ -16,8 +95,123 @@
     line-height: 150px;
     font-size: 60px;
     color: skyblue;
+   }
+
+
+
+/*------------------------separacion---------------------------*/
+
+.separador{
+   
+    text-align: center;
+    position: absolute;
+    display: block;
+    left: 46%;
+    top: 240%;
+}
+
+/*------------------------COLUMNAS---------------------------*/
+
+.columnas{
+    padding: 8% 0;
+}
+
+.contenido h3 {
+    color: skyblue;
+    font-size: 40px;
+}
+
+/*------------------------COLUMNAS2---------------------------*/
+
+.sector{
+    background-image: url(../image/sec-2.jpg);
+    width: 100%;
+    
+}
+
+.sectordos{
+    background-color: black;
+}
+
+.sector i {
+    display: block;
+    background-color: dodgerblue;
+    color: white;
+    border-radius: 200px;
+    font-size: 40px;
+    padding: 10px;
+    position: absolute;
+    
+}
+
+.icon-pencil {
+    display: block;
+    position: absolute;
+    
     
     
 }
+.icon-tools-2 {
+    display: block;
+    position: absolute;
+    
+}
+
+.icon-magnifying-glass{
+     display: block;
+    position: absolute;
+    
+}
+
+.iconos h4 {
+    color: skyblue;
+}
+
+/*------------------------COLUMNA3---------------------------*/
+
+.sectortrees {
+    padding: 8% 0;
+}
+
+
+/*------------------------FOOTER--------------------------*/
+
+footer{
+    padding: 4% 0;
+    background-color: #2C363D;
+    color: white;
+}
+
+.izquierda{
+    text-align: left;
+    
+    }
+
+
+
+
+.derecha {
+    float: right;
+}
+
+.derecha i{
+    
+    display: block;
+    color: dodgerblue;
+    border-radius: 200px;
+    font-size: 40px;
+    float: right;
+    margin: 20px 0;
+    padding-left: 5px;
+    
+}
+
+
+
+
+
+
+
+
 
 
