--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ ul{
     position: absolute;
     display: block;
     left: 46%;
-    top: 222%;
+    top: 1300px;
 }
 
 /*------------------------COLUMNAS---------------------------*/
@@ -204,7 +204,7 @@ ul{
     position: absolute;
     display: block;
     left: 47%;
-    top: 390%;
+    top: 2300px;
 }
 
 /*------------------------FOOTER--------------------------*/
