--- a/css/main.css
+++ b/css/main.css
@@ -1,89 +1,86 @@
 
 *{
     font-family: 'Raleway', sans-serif;
+   
 }
 /*------------------------HEADER---------------------------*/
-.fondo{
-    background-image: url(../image/large.jpg);
-    width: 100%;
-    height: auto;
-    background-size: cover;
-    
+body
+{
+	font-family: Lato;
 }
 
-header, .opacidad {
-    background-color: #2C363D;    
-    opacity: 0.8;
-   }
-
-nav{
-    float: right;
-    padding-top: 28px;
+header
+{
+	background: url(../image/large.jpg);
+	background-size: cover;
+	color: #FFF;
+}
+header a{
+	color: #FFF;
+}
+nav li a{
+	display: block;
+	padding: 15px 15px;
+	transition: all 0.2s;
+	border-radius: 6px;
+}
+nav li a:hover, nav li a:focus, nav li a:active{
+	text-decoration: none;
+	outline: none;
+	background: #FFF;
 }
 
-nav .list-menu li a{
+#main-navigation
+{
+
+	position: absolute;
+	right: 10px;
+	margin: 10px 0 0 0;
+}
+#main-navigation ul
+{
+	background: rgba(0,0,0,0.7);
+	list-style: none;
+	padding: 10px;
+	border-radius: 5px;
+}
+.frase
+{
+	margin: 120px 0;
+	text-align: center;
+}
+.tapita-azul
+{
+	background: rgba(90, 107, 136, 0.6);
+	padding-top: 10px ;
+}
+.header-banner
+{
+	background: rgba(65, 174, 214, 0.61);
+	padding: 40px 0;
+}
+.header-banner h3
+{
+	margin: 0;
+}
+
+
+.banner-button
+{
+	background: none;
+	border:1px solid #FFF;
+	padding: 5px 10px;
+	border-radius: 3px;
+	font-size: 20px;
+    margin: 50px;
     color: white;
-    font-size: 20px;
+
 }
 
 .logo{
-    padding-top: 20px;
+    margin: 10px 0;
 }
 
-.frases {
-    text-align: center;
-    padding: 13%;
-    color: white;
-    }
-
-.frases h2 {
-    font-size: 50px;
-}
-
-.header-banner{
-    background-color: #064770 ;
-    padding:4%; 
-    color: white;
-}
-
-
-
-.boton{
-    border: 2px solid white;
-    font-size: 30px;
-    background-color: #6382AB;
-    margin-top: 5%;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-ul{
-  list-style: none;
-}
-#menu li>a{
-  
-  color: white;
-  padding: 10px;
-  display: block;
-  text-decoration: none;
-  min-width: 100px;
-  font-size: 20px;
-}
-#menu li>a:hover{
-  color: #000;
-  background-color: #eaeaea;
-  opacity: 0.2;
-}
-#menu>li{
-  float: none;
-  
-}
-#menu>li>ul{
-  display: none;
-}
-#menu>li:hover>ul {
-  display:block;
-}
 
 
 /*------------------------SERVICIOS---------------------------*/
@@ -127,13 +124,15 @@ ul{
 
 /*------------------------separacion---------------------------*/
 
-.separador{
-   
-    text-align: center;
-    position: absolute;
-    display: block;
-    left: 46%;
-    top: 1300px;
+.vertical-divder{
+   border-top: 1px solid grey;
+    text-align: center;   
+}
+
+.vertical-divder img {
+   position: absolute;
+    z-index: 1;
+    transform: translateY(-50%) translateX(-50%);
 }
 
 /*------------------------COLUMNAS---------------------------*/
@@ -147,65 +146,45 @@ ul{
     font-size: 40px;
 }
 
-/*------------------------COLUMNAS2---------------------------*/
-
-.sector{
+.pasos .row{
     background-image: url(../image/sec-2.jpg);
-    width: 100%;
-    height: auto;
-    background-attachment: scroll;
-    background-position: left;
-    background-size: cover;
-    opacity: 0.9;
-   
-}
-
-
-
-.iconos ul li{
-    text-align: right;
-}
-
-.iconos ul {
-    list-style: none;
+    background-size: contain;
+    
     
 }
-.iconos h4 {
-    color: skyblue;
+
+.col-pasos-info{
+    background-color: white;
 }
 
-.iconos ul li i{
-    margin-right: -50px;
-    margin-top: 60px;
-    display: inline-block;
-    background-color: dodgerblue;
-    color: white;
-    border-radius: 200px;
-    font-size: 40px;
+.pasos-info{
+    background-color: white;
+}
+.icon-blue{
+    border-radius: 40px;
+    background-color: skyblue;
     padding: 10px;
-    }
+    font-size: 25px;
+    color: white;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: -50px;
+}
 
 .box{
-    margin-left: 40px;
+    position: relative;
+    }
+
+.box3{
+    margin-bottom: 50px;
 }
-
-
-
-
-
 /*------------------------COLUMNA3---------------------------*/
 
 .sectortrees {
     padding: 8% 0;
 }
 
-.separadordos{
-    text-align: center;
-    position: absolute;
-    display: block;
-    left: 47%;
-    top: 2300px;
-}
 
 /*------------------------FOOTER--------------------------*/
 
@@ -220,22 +199,23 @@ footer{
     
     }
 
-
-
-
 .derecha {
     float: right;
 }
-
-.derecha i{
+.derecha a{
     
-    display: block;
+    text-align: center;
     color: dodgerblue;
     border-radius: 200px;
     font-size: 40px;
-    float: right;
-    margin: 20px 0;
+    padding: 10px;
+    margin-bottom: 40px;
       
+}
+
+.textto{
+    color: white;
+    padding: 45px 0;
 }
 
 
@@ -244,41 +224,40 @@ footer{
 .formulario{
     background-image: url(../image/large.jpg);
     width: 100%;
-    height: 800px;
+    height: 1000px;
     background-position: center;
     padding: 200px 0;
+
     
 }
-
-
-.formulariodos{
-    background-color: white;
-    margin: 0;
-}
-
-.azul{
-    background-color: dodgerblue;
+.blue{
+    background-color: royalblue;
+    margin: auto;
     width: 100%;
     height: 10px;
-    
 }
-
-input{
+.white{
+    background-color: white;
+    margin: auto;
     width: 100%;
+    height: auto;
+    text-align: center;
+    padding: 10px 20px;
 }
 
-label{
-    text-align: left;
+.importante {
+    color: red;
 }
 
 
+.espacios {
+    background-color: white;
+    text-align: center;
+}
 
-
-
-
-
-
-
+.form-group{
+    margin: 0 auto;
+}
 
 
 
